pari_bindings/libpari/src/headers/paridecl.h

GEN     gprec(GEN x, long l);
ulong   maxprime(void);
GEN     gmul(GEN x, GEN y);
GEN     gsqr(GEN x);
GEN     gmod(GEN x, GEN y);
void    pari_close(void);
void    pari_init(size_t parisize, ulong maxprime);
GEN     dbltor(double x);
double  rtodbl(GEN x);
/* trans1.c */

GEN     Pi2n(long n, long prec);
GEN     glog(GEN x, long prec);
INLINE long   itos(GEN x);
INLINE ulong  get_avma(void);
INLINE void   set_avma(ulong av);
INLINE GEN    stoi(long x);
INLINE GEN    gerepilecopy(pari_sp av, GEN x);